# self-operating-computer

./: .env-sample  .example.env  .fdignore  .gitignore  CONTRIBUTING.md  Dockerfile  Evaluate ChatGPT rewrite  GUI_README.md  LICENSE  README.md  aimbot  evaluate.py  evaluator.py  gui.py  gui_main.py  main.py  peaches  pyproject.toml  requirements-audio.txt  requirements.txt  run.sh  sample-system-prompt.md  setup.py  soc_installer.sh  test_gemini_ssl.py  test_websocket.py
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-publish.yml  upload-package.yml
deploy/config/: defaults.env
docs/: cache_title.json  index.html  metadata.json  sitemap.xml  tree.html
docs/data/: 0.json  1.json
docs/doc/: 347970bb-ed24-4242-ae37-7fe0302c6efb.json  3a3bb70b-8380-48f2-913e-4618828f90cd.json  4866fd28-ffa6-4bbe-b91f-4767e302f2f1.json  4bf7650c-3fea-4149-bd10-682a244a9f3c.json  4e8d04d1-1460-493f-b7c8-e6b09fc01cca.json  52984b9f-96af-4dbe-bc63-7aff1b5d9c1f.json  6d712400-8eb0-4525-9321-2f4dafe97412.json  7b70d3c1-0ec1-4e5e-b03c-32b9fa9253b5.json  945b7651-d5be-4fe6-a83b-e389682cbcdb.json  9fff9f58-42fa-4645-ba08-ff921e78c97d.json  b1287c19-5498-479a-9378-d07fb007c20f.json  cbc91c29-4de1-4c25-8c4e-e6fc470ad10b.json  cbeb3e57-4692-4372-a31c-79a79afa76cd.json  d0472648-cfcb-44c9-b9d8-f4beedab4485.json  ecb738a7-1309-419a-8df2-cff62ffde521.json  f20ab70b-0846-462c-8e73-67a38b94d32e.json  fe4a61a7-8d06-48e0-8690-862340a47875.json
docs/src/: evaluate.py  requirements-audio.txt  requirements.txt  setup.py
operate/: .pie.py  __init__.py  actions.py  config.py  dialog.py  dialogs.py  exceptions.py  main.py  operate.py  prompt_template.py  prompts.py  screen_capture.py  settings.py  setup_icon_templates.py  styling.py  utils.py
operate/actions/: actions.py  api_interactions.py
operate/config/: settings.py
operate/dialogs/: dialog.py
operate/enums/: __init__.py  (+2 more)
test/: test_main.py
(+42 files in other folders)
